# my-openenv

./: .gitignore  ANALYSIS_TRAIN_TEST_REPORT.md  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scripts/: run_full_pipeline.py
server/: app.py
src/: environment.py  models.py
tasks/: task_definitions.py
