[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-validator-env"
version = "1.0.0"
description = "OpenEnv environment for training AI agents to validate and route API requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "pyyaml>=6.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
py-modules = ["app", "inference"]
